<resources>
    <string name="app_name">Yathannsh</string>
    <string name="name">Yathannsh</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_item1">Item 1</string>
    <string name="title_item2">Item 2</string>
    <string name="title_item3">Item 3</string>
    <string name="title_item4">Item 4</string>
    <string name="github">GitHub</string>
    <string name="click_search_button">Click on the Search Button!</string>
    <string name="custom_layout_with_listview">This is a custom Layout containing a ListView with android:id=\"@android:id/list\"</string>
    <string name="fragment">Fragment</string>
    <string name="activity">Activity</string>
    <string name="fragment_listview">Fragment ListView</string>
    <string name="fragment_scrollview">Fragment ScrollView</string>
    <string name="fragment_viewpager">Fragment ViewPager</string>
    <string name="fragment_viewpager_with_tabs">Fragment ViewPager with Tabs</string>
    <string name="start_activity">Start Activity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus in justo consequat, porta ipsum vel, condimentum sapien. In fringilla malesuada vestibulum. Fusce suscipit eros non augue rhoncus placerat a a lorem. In est ipsum, blandit quis eros ut, lobortis porttitor nisi. Quisque purus quam, consectetur et semper eu, sodales vel augue. Suspendisse ultrices nunc nec sem interdum egestas. Aenean ut eros at quam scelerisque tempus. Ut condimentum ullamcorper augue non tempus. Quisque id ligula quam. Ut maximus risus dolor, a volutpat ipsum finibus vel. Aenean in porta lectus, vel aliquet felis. In hac habitasse platea dictumst. Duis interdum mauris ut arcu semper pulvinar.  Quisque quis leo sed elit elementum tincidunt. Aenean interdum augue nulla, vitae maximus tellus consequat sed. Pellentesque volutpat varius elit dignissim dictum. Nulla a vestibulum urna. Fusce a lacus quis nisi scelerisque efficitur vitae ac nibh. Donec luctus sed lectus quis ultrices. Curabitur sagittis, risus et tristique mollis, ipsum felis interdum sapien, non congue eros turpis sit amet leo. Suspendisse potenti. Integer nec urna fringilla, euismod dolor vitae, euismod velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur pharetra consectetur lobortis. Aenean sit amet metus a ligula ultricies laoreet in eu lacus. Donec congue, quam fringilla ultricies finibus, nulla erat ullamcorper tortor, vitae blandit ante massa in est. Quisque tempus porttitor erat id porttitor. Nam dictum non nulla a convallis. Integer sodales lorem lorem, quis vehicula quam luctus sed. Suspendisse et congue ipsum, non aliquet nisi. Vestibulum eu dignissim eros, eget pretium augue. Phasellus placerat nulla sed tempor dignissim. Ut egestas diam nec sem pulvinar gravida. Nulla facilisi. Maecenas tincidunt metus quis massa rhoncus cursus. Curabitur non sapien sed nunc posuere facilisis. Sed vulputate facilisis leo, sed mattis leo efficitur ac. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus sit amet felis sed turpis scelerisque tempus et vel lacus. Curabitur rutrum, dui ac interdum iaculis, neque mauris semper eros, a efficitur enim magna non neque. Duis venenatis turpis vehicula purus rhoncus, et dignissim neque posuere. Etiam pulvinar mauris purus, vel rutrum dolor luctus sit amet. Aliquam convallis nec nisl ut maximus. Suspendisse vitae dignissim mauris. Aenean mauris tortor, aliquam quis dui in, lobortis dictum nisl. Suspendisse quis odio hendrerit, vestibulum elit non, ultricies lorem. Integer bibendum nibh turpis. Nam purus tortor, pulvinar ac nisl ac, dictum ornare odio. Donec viverra dolor at mi tempus aliquet. Integer condimentum, sapien et semper feugiat, nunc nisl egestas lectus, quis mattis metus lacus quis velit. Pellentesque non urna porttitor, bibendum nisl non, ultricies massa. Proin quis mauris ac dui accumsan pharetra. Aliquam erat volutpat. Suspendisse fringilla dolor sed nulla euismod sollicitudin. Pellentesque et arcu feugiat magna facilisis tempor id at leo. Aliquam egestas rhoncus convallis. Quisque vitae dolor elit. Cras eleifend felis mauris, eu sodales lacus imperdiet eget. Donec vulputate tortor ut purus lobortis bibendum. Nulla lectus nunc, finibus sed nisi in, porttitor hendrerit lorem. Fusce vehicula ante enim. Pellentesque et consequat metus. In neque eros, euismod vitae lectus sed, ornare rutrum dolor. Nulla malesuada, ante at fringilla suscipit, sem leo sollicitudin orci, mattis iaculis velit metus sit amet dui. Cras malesuada luctus risus, vel egestas neque lacinia ut. Morbi non convallis ligula. Nunc orci diam, elementum eu tincidunt at, lacinia eget diam. Nunc volutpat ante non diam semper pulvinar. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse mollis ipsum non mi pulvinar ultricies. Cras tincidunt metus sit amet urna mollis, sit amet vulputate arcu placerat. In accumsan interdum purus eget tempus. Maecenas sit amet dolor lobortis, tincidunt elit nec, sagittis purus. Phasellus vestibulum interdum efficitur. Mauris id sem sollicitudin, ornare metus eget, semper arcu. Etiam vestibulum tincidunt ante nec fermentum. Mauris iaculis leo ac luctus tempus. Duis dapibus mollis neque. Sed efficitur ipsum ac metus sodales maximus. Ut feugiat tortor in egestas tincidunt. Nunc a fringilla enim. Aenean a odio ante. Suspendisse aliquet finibus lacinia. Mauris fringilla ornare odio. In eget blandit tortor. Cras id ultrices magna. Nunc feugiat ex sed sagittis accumsan. Aenean nec efficitur massa, et hendrerit magna. Aenean porta turpis varius, vestibulum libero nec, varius ipsum. Sed hendrerit nulla ut massa aliquet efficitur. Proin consectetur euismod efficitur. Sed in metus id leo blandit imperdiet. Curabitur cursus nisi et odio finibus placerat vel sed turpis. Fusce placerat ipsum eget purus egestas, vel euismod erat pharetra. Curabitur non nisl felis. Nam vestibulum purus ac metus pulvinar, in aliquam lectus sagittis. Phasellus a porttitor risus. Cras nec ante turpis. Sed convallis dui id quam venenatis, sit amet sodales nisi molestie. Phasellus vulputate eget lacus sed tempor. Curabitur id ornare nisi. Fusce a nisl quis purus tempus tempus in eget felis. Integer congue tellus condimentum justo pellentesque finibus. In rutrum leo nec cursus tempor. In vitae sagittis neque, eget lacinia nisi. Sed quis felis cursus, pretium augue at, gravida nulla. Phasellus at ante sollicitudin, tempor nulla eu, commodo orci. Nam scelerisque sit amet erat a molestie. Donec lacinia ligula vitae erat congue, nec volutpat ante pulvinar. Ut pretium diam eget dignissim pulvinar. Quisque eget efficitur est. Aenean faucibus bibendum tempus. Nullam non enim non sapien fermentum semper. Vivamus commodo velit quis erat hendrerit congue. Suspendisse tincidunt, arcu pharetra mattis pulvinar, tellus neque rhoncus justo, eget interdum arcu magna at urna. </string>
    <string name="title_activity_scrolling">Hi I\'m Yathannsh</string>
    <string name="text_1">"<b>Computer Science\n</b>"</string>
        <string name="text_01">"
    "I am passionate about code, and like building things using it. The strong liking for computer
            science drived me to create the first ever club for Tech enthusiasts in the state of
            Rajasthan: Turing Fraternity, which I currently head as its President.\n"</string>
    <string name="text_2">"<b>Oratory\n</b>"</string>
    <string name="text_02">
    "Debating and MUNnig are my strong forte. I am a national level debator and also reside as the President of my school's MUN Club\n"
    </string>
        <string name="text_3">"<b>Basketball\n</b>"</string>
    <string name="text_03">
    "I am interested in the sport of Basketball. I represent my state Rajasthan at U-19 Indian Nationals and also participate in various intra-schooltournaments\n"
    </string>
            <string name="text_4">"<b>Cycling\n</b>"</string>
    <string name="text_04">
    "My Sundays are spent cycling around the city of Jaipur. The hilly terrain in the city makes it a cyclist's delight. I am also a part of Jaipur Cyclist and often take part in eco-drives to raise awarness about various plaguing issues.\n"
    </string>
</resources>